add flag for prefetch sorting
Signed-off-by: Karim Taam <karim.t2am@gmail.com>